<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/game_str1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#f0f0f0"
            android:gravity="center"
            android:text="@string/gameStr1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/game_str2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#f0f0f0"
            android:gravity="center"
            android:text="@string/gameStr2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/game_str3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#f0f0f0"
            android:gravity="center"
            android:text="@string/gameStr3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/game_str4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#f0f0f0"
            android:gravity="center"
            android:text="@string/gameStr4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/game_show_str1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#f0f0f0"
                android:gravity="center"
                android:text="@string/gameShowStr1"
                android:textColor="#000000"
                android:textSize="60sp" />

            <Button
                android:id="@+id/game_show_str2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#f0f0f0"
                android:gravity="center"
                android:text="@string/gameShowStr2"
                android:textColor="#000000"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/game_show_str3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#f0f0f0"
                android:gravity="center"
                android:text="@string/gameShowStr3"
                android:textColor="#000000"
                android:textSize="60sp" />

            <Button
                android:id="@+id/game_show_str4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#f0f0f0"
                android:gravity="center"
                android:text="@string/gameShowStr4"
                android:textColor="#000000"
                android:textSize="60sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:onClick="test"
        android:text="开始" />

    <TextView
        android:id="@+id/myscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginRight="10dp"
        android:layout_marginTop="27dp"
        android:textColor="#ff0000"
        android:text="分数：0" />

</RelativeLayout>